
[Test_Form_Rendering - 1]
<form action="POST" action="/update" encoding="application/x-www-form-urlencoded">

    <label for="name" class="form-label" >name</label>
    <input name="name" type="text" value="John Doe" id="name" autocomplete="on" autocorrect="off" class="form-control" placeholder="Enter the name" required readonly autofocus size="10" maxlength="100" minlength="10" max="100" min="10" step="10" pattern="^[a-z]&#43;$"  autocomplete="on">
    
    

    <label for="email" class="form-label" >email</label>
    <input name="email" type="email" value="john.doe@gmail.com" id="email" autocomplete="off" autocorrect="off" class="form-control" max="" min="">
    
    

    <label for="date" class="form-label" >date</label>
    <input name="date" type="date" value="2022-04-01" id="date" autocomplete="off" autocorrect="off" class="form-control" max="" min="">
    
    

</form>
---

[Test_Form_Rendering_Error - 1]
<form action="POST" action="" encoding="application/x-www-form-urlencoded">

    <label for="position" class="form-label" >position</label>
    <input name="position" type="number" value="1" id="position" autocomplete="off" autocorrect="off" class="form-control" max="" min="">
    <span>The position</span>
    

</form>
---

[Test_Form_Rendering_Error - 2]
<form action="POST" action="" encoding="application/x-www-form-urlencoded">

    <label for="position" class="form-label" >position</label>
    <input name="position" type="number" value="foo" id="position" autocomplete="off" autocorrect="off" class="form-control" max="" min="">
    <span>The position</span>
    <ul>
        <li class="text-red-500 text-xs italic" style="" >value does not match the expected type</li>
    
        <li class="text-red-500 text-xs italic" style="" >the value is not a valid email</li>
    </ul>

</form>
---
